# Minecraft

./: CMakeLists.txt  main.cpp
inc/: block.h  object.h  perlin_noise.h  player.h  ray.h  world.h
src/: block.cpp  object.cpp  perlin_noise.cpp  player.cpp  ray.cpp  world.cpp
